[gd_scene load_steps=10 format=3 uid="uid://cvlmvdrtw5mpi"]

[ext_resource type="Texture2D" uid="uid://cd5ehxfumylk3" path="res://imagensMenu/wallpapersden.com_green-artistic-pixel-art_1440x1440.jpg" id="1_o3dbl"]
[ext_resource type="Script" uid="uid://di0h05lqi5rff" path="res://scripts/menuAmazonia.gd" id="1_uyiib"]
[ext_resource type="FontFile" uid="uid://bex28l0108g5" path="res://Resources/CodecPro-Regular.ttf" id="3_oryis"]
[ext_resource type="FontFile" uid="uid://v14i2yxne45l" path="res://Resources/Codec Pro ExtraBold.ttf" id="4_1yk2f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mqx0w"]
texture = ExtResource("1_o3dbl")
modulate_color = Color(0.505344, 0.505344, 0.505344, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b4hu4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vg1ap"]
bg_color = Color(0.0560257, 0.340737, 0.293693, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.14)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tregq"]
bg_color = Color(0.0169827, 0.180084, 0.152168, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.14)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trse2"]
bg_color = Color(0.188235, 0.145098, 0.505882, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.14)

[node name="Amazonia" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyiib")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mqx0w")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -34.5
offset_bottom = 34.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_b4hu4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vg1ap")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tregq")
theme_override_styles/normal = SubResource("StyleBoxFlat_trse2")
text = ">"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -34.5
offset_right = 209.0
offset_bottom = 34.5
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.973535, 0.973535, 0.973535, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_b4hu4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vg1ap")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tregq")
theme_override_styles/normal = SubResource("StyleBoxFlat_trse2")
text = "<"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -119.0
offset_right = 105.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_oryis")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_b4hu4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vg1ap")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tregq")
theme_override_styles/normal = SubResource("StyleBoxFlat_trse2")
text = "JOGAR
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -11.5
offset_right = 31.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.188235, 0.145098, 0.505882, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("4_1yk2f")
theme_override_font_sizes/font_size = 120
text = "AmazÃ´nia"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
